--- a/components/ExecCard.jinja
+++ b/components/ExecCard.jinja
@@ -2,7 +2,7 @@
 
 <div class="bg-white p-4 shadow-md flex flex-col" {{ attrs.render() }}>
     <h2 class="text-center text-lg font-bold">
-    {{ exec.name }}
+    {{ exec.full_name }}
     </h2>
     <img src="{{ url_for('static', filename='uploads/images/' + exec.img) }}" class="w-64 h-64 object-cover" />
     <h2 class="text-center text-lg font-bold">{% for role in exec.roles %}{{ role }}{% if not loop.last %}, {% endif %}{% endfor %}</h2>
