--- a/components/BottomFooter.jinja
+++ b/components/BottomFooter.jinja
@@ -10,7 +10,11 @@
     </div>
     <div class="flex flex-col items-center sm:flex-row-reverse">
         <div class="flex flex-row items-center sm:mt-0">
-            <a href="#" class="flex flex-col items-center justify-center text-gray-700 font-bold py-3 px-6">
+            <a href="https://www.x.com/mchighlanders/" class="flex flex-col items-center justify-center text-gray-700 font-bold py-3 px-6">
+                <i class="fa-brands fa-twitter"></i>
+                X
+            </a>
+            <a href="https://www.instagram.com/mchighlanders/" class="flex flex-col items-center justify-center text-gray-700 font-bold py-3 px-6">
                 <i class="fa-brands fa-instagram"></i>
                 Instagram
             </a>
