--- a/components/Layout.jinja
+++ b/components/Layout.jinja
@@ -10,38 +10,41 @@
 
   <!-- Icon -->
   <link rel="icon" href="{{url_for('static', filename='assets/images/logo.ico')}}">
+  {# <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='assets/dist/css/output.css')}}"
+  /> #}
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
+  <!-- Htmx -->
+  <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
+
+  <!-- Bootstrap -->
+  {# <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> #}
+  
+  <!-- Htmx extensions -->
+  <!-- <script src="https://unpkg.com/htmx-ext-response-targets@2.0.0/response-targets.js"></script> -->
+
+  <!-- Hyperscript -->
+  <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
+
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
-    {# <link
-        rel="stylesheet"
-        href="{{url_for('static', filename='assets/dist/css/output.css')}}"
-    /> #}
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-
-    <!-- Htmx -->
-    <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
-
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
-    <!-- Htmx extensions -->
-    <!-- <script src="https://unpkg.com/htmx-ext-response-targets@2.0.0/response-targets.js"></script> -->
-
-    <!-- Hyperscript -->
-    <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
   {{ catalog.render_assets() }}
 </head>
 <body class="min-h-screen bg-gray-100" id="body">
   <TopNav title="The Royal Highlanders">
-      <a href="/events" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3">Events</a>
-      <a href="/sharktank" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3">Shark Tank</a>
-      <a href="/election" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3">Election</a>
-      <a href="/constitution" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3">Constitution</a>
-      <a href="/feedback" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3">Feedback</a>
+      <a href="/events" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Events</a>
+      <a href="/sharktank" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Shark Tank</a>
+      <a href="/election" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Election</a>
+      <a href="/constitution" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Constitution</a>
+      {# <a href="/feedback" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Feedback</a> #}
+    {# <a href="/gallery" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Gallery</a> #}
   </TopNav>
   <div id="content">{{ content }}</div>
+  <div class="flex flex-row my-10"></div>
 </body>
 <BottomFooter></BottomFooter>
 </html>
