--- a/components/TopNav.jinja
+++ b/components/TopNav.jinja
@@ -2,7 +2,7 @@
 
 <!-- Navbar -->
 <nav class="flex flex-row w-full h-screen/8 justify-between items-center bg-white">
-    <a class="w-1/3 flex justify-center self-center text-2xl font-bold hover:scale-110 hover:text-extrabold" href="/">{{ title }}</a>
+    <a class="w-1/3 flex justify-center self-center text-2xl font-bold hover:scale-110 hover:text-extrabold z-10" href="/">{{ title }}</a>
     <div class="flex justify-end">
         {{ content }}
     </div>
