post election update

--- a/components/Layout.jinja
+++ b/components/Layout.jinja
@@ -38,7 +38,8 @@
   <TopNav title="The Royal Highlanders">
       <a href="/events" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Events</a>
       <a href="/sharktank" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Shark Tank</a>
-      <a href="/election" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Election</a>
+      {# <a href="/election" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Election</a> #}
+      <a href="/committees" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Committees</a>
       <a href="/constitution" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Constitution</a>
       {# <a href="/feedback" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Feedback</a> #}
     {# <a href="/gallery" class="mx-4 text-black text-xl no-underline hover:font-extrabold hover:scale-110 space-x-0 p-3 pt-3 z-10">Gallery</a> #}
