--- a/templates/declare_candidacy.jinja
+++ b/templates/declare_candidacy.jinja
@@ -28,7 +28,7 @@
         
         <div class="mb-6">
             <label for="platform" class="block text-sm font-medium text-gray-700">Platform</label>
-            <input type="text" id="platform" name="platform" maxlength="1000" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" placeholder="Why do you think you'd be a good hall club president?" required>
+            <input type="text" id="platform" name="platform" maxlength="1000" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" placeholder="Why do you think you'd be a good hall club exec board member?" required>
         </div>
     </LoginForm>
 </Layout>
