--- a/components/BottomFooter.jinja
+++ b/components/BottomFooter.jinja
@@ -14,6 +14,10 @@
                 <i class="fa-brands fa-twitter"></i>
                 X
             </a>
+            <a href="https://discord.gg/fSGHFySMX2" class="flex flex-col items-center justify-center text-gray-700 font-bold py-3 px-6">
+                <i class="fa-brands fa-discord"></i>
+                Discord
+            </a>
             <a href="https://www.instagram.com/mchighlanders/" class="flex flex-col items-center justify-center text-gray-700 font-bold py-3 px-6">
                 <i class="fa-brands fa-instagram"></i>
                 Instagram
