--- a/components/SingleInputForm.jinja
+++ b/components/SingleInputForm.jinja
@@ -1,4 +1,4 @@
-{#def action, action_two, placeholder, input_name="" #}
+{#def action, action_two="", placeholder, input_name="" #}
 
 <form action="{{ action }}/{{ action_two }}" method="post" {{ attrs.render() }}>
     <input
